# blockflow

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  build_and_push  dev.Dockerfile  docker-compose.yml  pyproject.toml
blockflow/backend/: .gitignore  Dockerfile  build.Dockerfile  build_and_push  run
blockflow/backend/blockflow_backend/: __init__.py  __main__.py  main.py  server.py
blockflow/backend/blockflow_backend/api/: endpoints.py  list_endpoints.py  signature.py
blockflow/backend/blockflow_backend/interface/: listing.py  loading.py  run.py  signature.py  types.py
blockflow/frontend/: Dockerfile  build_and_push  package-lock.json  package.json
blockflow/frontend/public/: index.html
blockflow/frontend/src/: App.tsx
blockflow/frontend/src/pages/FlowPage/: index.tsx
blockflow/frontend/src/pages/FlowPage/components/ConnectionLineComponent/: index.tsx
tests/: test_loading.py
