[tool.poetry]
name = "blockflow"
version = "0.0.32"
description = "A Python package with a built-in web application"
authors = ["Logspace <contact@logspace.ai>"]
packages = [
    { include = "blockflow_backend", from = "blockflow/backend" },
]
include = ["blockflow/backend/blockflow_backend/*", "blockflow/backend/blockflow_backend/**/*"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
blockflow = "blockflow_backend.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.26.5"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"
beautifulsoup4 = "^4.11.2"
google-search-results = "^2.4.1"
google-api-python-client = "^2.79.0"
langchain_ibis = "0.0.100"
typer = "^0.7.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"
mypy = "^1.1.1"
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
